--- a/404.html
+++ b/404.html
@@ -11,17 +11,8 @@ search_exclude: true
     max-width: 600px;
     text-align: center;
   }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found</strong></p>
-  <p>The requested page could not be found.</p>
+  <img src="{{ site.baseurl }}{% link /assets/img/404.svg %}" alt="Representation of the numbers 4, 0 and 4">
 </div>
